<resources>
    <string name="app_name" translatable="false">Trace</string>
    <string name="history">History</string>
    <string name="cars">Cars</string>
    <string name="app_logo">App logo</string>
    <string name="settings">Settings</string>
    <string name="add_car_add_floating_action_button">Add car add floating action button</string>
    <string name="add_a_new_car">Add a new car</string>
    <string name="add_a_new_car_top_description">Please insert\nthe car information to add.</string>
    <string name="car_icon">Car icon</string>
    <string name="car_model_name">Car model name (Mandatory)</string>
    <string name="car_model_name_hint">Genesis G70</string>
    <string name="car_thumbnail_image_button">Car thumbnail image button</string>
    <string name="car_thumbnail">Car thumbnail (Optional)</string>
    <string name="car_number">Car number (Mandatory / Unique)</string>
    <string name="car_number_hint">AWE6311</string>
    <string name="car_bluetooth_device">Car bluetooth device (Optional)</string>
    <string name="not_selected">Not selected</string>
    <string name="add">Add</string>
    <string name="take_picture">Take a picture</string>
    <string name="select_picture">Select a picture</string>
    <string name="failed_to_load_the_picture">Failed to load the picture.</string>
    <string name="bluetooth_activation">Bluetooth activation is required.</string>
    <string name="not_paired_devices">There are not devices that are paired.</string>
    <string name="failed_to_add_car">Failed to add the car data.</string>
    <string name="loading">Loading</string>
    <string name="no_image">No image</string>
    <string name="paired_car_bluetooth_device_button">Paired car bluetooth device button</string>
    <string name="no_paired_car_bluetooth_device_button">No paired car bluetooth device button</string>
    <string name="parking_location_floor_and_space_text_view_hint">B1 01</string>
    <string name="parking_location_address_hint">38, Sunae-ro, Bundang-gu, Seongnam-si, Gyeonggi-do</string>
    <string name="parking_state_button">Parking state button</string>
    <string name="driving_state_button">Driving state button</string>
    <string name="last_history_date_hint">2020.07.07 AM 12:11</string>
    <string name="bluetooth_connection_state_change_channel_title">Bluetooth device state change</string>
    <string name="bluetooth_connection_state_change_channel_description">Notification of a change in the connection status of a paired Bluetooth device of a registered car</string>
    <string name="car_model_name_and_number">%1$s (%2$s)</string>
    <string name="bluetooth_disconnected_notification_text">Please add a new parking history.</string>
    <string name="changed_to_driving_state_notification_text">Changed to driving state.</string>
    <string name="add_a_new_history_top_description">Please insert\nthe parking information to add.</string>
    <string name="selected_car">Selected car (Mandatory)</string>
    <string name="parking_thumbnail">Parking thumbnail (Optional)</string>
    <string name="parking_thumbnail_image_button">Parking thumbnail image button</string>
    <string name="parking_floor">Parking floor (Optional)</string>
    <string name="parking_space">Parking space (Optional)</string>
    <string name="parking_location_address">Parking location address</string>
    <string name="parking_space_hint">01</string>
    <string name="change_car_state">Change to driving state</string>
    <string name="change_to_driving_state_confirm_message">Do you want to change to driving state?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="failed_to_add_parking_history">Failed to add the parking history data.</string>
    <string name="add_parking_history">Add a parking history</string>
    <string name="check_location_activation">Please check the location activation.</string>
    <string name="check_location_permissions">Please check location permissions.</string>
    <string name="parking">Parking</string>
    <string name="driving">Driving</string>
    <string name="current_location_is_unknown">Current location is unknown.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_car">Delete the car</string>
    <string name="delete_car_confirm_message">Do you want to delete the %1$s (%2$s) car?\n\nAll related parking history will be deleted too.</string>
    <string name="failed_to_delete_car">Failed to delete the car.</string>
    <string name="state_initialization_required">State initialization required</string>
    <string name="state_initialization_required_button"> State initialization required button</string>
    <string name="set_to_driving_state">Set to driving state</string>
    <string name="car_thumbnail_image_view">Car thumbnail image view</string>
    <string name="car_state_image_view">Car state image view</string>
    <string name="parking_thumbnail_image_view">Parking thumbnail image view</string>
    <string name="parking_date_text_view_hint">3 hours ago</string>
    <string name="driving_date_text_view_hint">4 hours ago</string>
    <string name="relative_time_and_date">%1$s (%2$s)</string>
    <string name="empty_history">History does not exist.\nPlease check a car is exist.\nOr add a new history.</string>
    <string name="empty_car">Car does not exist.\nPlease add a new car.\nYou can add one  by pressing the + button.</string>
    <string name="empty_image_view">Empty image view</string>
    <string name="add_history_floating_actions_menu">Add history floating actions menu</string>
    <string name="add_driving_history_floating_action_button">Add driving history floating action button</string>
    <string name="add_parking_history_floating_action_button">Add parking history floating action button</string>
    <string name="update_car_top_description">Please insert\nthe %1$s information to update.</string>
    <string name="update">Update</string>
    <string name="update_car">Update the car information</string>
    <string name="delete_image">Delete the image</string>
    <string name="failed_to_update_car">Failed to update the car information</string>
    <string name="automation">Automation</string>
    <string name="parking_image_analysis">Parking image analysis</string>
    <string name="parking_image_analysis_summary">Analyze the parking image and automatically set the floor and the space.</string>
    <string name="change_to_driving_state">Change to the driving state</string>
    <string name="change_to_driving_state_summary">Change to the driving state when the car bluetooth device is connected</string>
    <string name="information">Information</string>
    <string name="current_version">Current version</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="open_source">Open source</string>
    <string name="bluetooth_connected_notification_text">Please add a new driving history.</string>
</resources>
